--- a/.storybook/base.css
+++ b/.storybook/base.css
@@ -1,4 +1,4 @@
-:root {
+body {
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
   padding: 0;
   margin: 0;
